--- a/pom.xml
+++ b/pom.xml
@@ -8,19 +8,11 @@
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>loach-parent</module>
+        <module>loach-web</module>
     </modules>
     <packaging>pom</packaging>
-    <properties>
-    </properties>
 
-    <dependencyManagement>
-        <dependencies>
 
-        </dependencies>
-    </dependencyManagement>
-    <!-- shared dependencies across the whole project -->
-    <dependencies>
-    </dependencies>
-  
+
 
 </project>
