--- a/loach-parent/pom.xml
+++ b/loach-parent/pom.xml
@@ -1,13 +1,108 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>loach-pom</artifactId>
-        <groupId>org.tanziquan.loach</groupId>
-        <version>1.0.0-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>org.tanziquan.loach</groupId>
     <artifactId>loach-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
+    <properties>
+        <jdk.version>1.8</jdk.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <!-- spring version start -->
+        <spring-boot.version>1.3.3.RELEASE</spring-boot.version>
+        <spring.version>4.2.5.RELEASE</spring.version>
+        <spring-data-redis.version>1.6.4.RELEASE</spring-data-redis.version>
+        <spring-data-commons.version>1.11.4.RELEASE</spring-data-commons.version>
+        <!-- spring version end -->
+
+        <!-- apache-common version start -->
+        <commons-lang.version>3.4</commons-lang.version>
+        <commons-collections.version>3.2.2</commons-collections.version>
+        <commons-pool2.version>2.4.2</commons-pool2.version>
+        <commons-logging.version>1.2</commons-logging.version>
+        <commons-codec.version>1.9</commons-codec.version>
+        <!-- apache-common version end -->
+
+        <!-- mybatis start -->
+        <mybatis-spring.version>1.2.3</mybatis-spring.version>
+        <mybatis.version>3.3.0</mybatis.version>
+        <!-- mybatis end -->
+
+        <!-- db start -->
+        <druid.version>1.0.16</druid.version>
+        <mysql-connector-java.version>5.1.38</mysql-connector-java.version>
+        <!-- db end -->
+
+        <!-- redis start -->
+        <jedis.version>2.8.0</jedis.version>
+        <!-- redis end -->
+
+        <!-- test start -->
+        <junit.version>4.12</junit.version>
+        <!-- test end -->
+
+        <slf4j.version>1.7.21</slf4j.version>
+        <logback.version>1.1.7</logback.version>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jcl-over-slf4j</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+
+            <!-- spring start -->
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-framework-bom</artifactId>
+                <version>${spring.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!---->
+        </dependencies>
+    </dependencyManagement>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
+                    <compilerVersion>${jdk.version}</compilerVersion>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
