--- a/loach-parent/pom.xml
+++ b/loach-parent/pom.xml
@@ -88,7 +88,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <!---->
+
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-commons</artifactId>
+                <version>${spring-data-commons.version}</version>
+            </dependency>
+            <!--spring end-->
         </dependencies>
     </dependencyManagement>
     <build>
