--- a/loach-web/pom.xml
+++ b/loach-web/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
         <!-- test end -->
 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+        </dependency>
+
         <!-- 使用嵌入式Jetty作为Web应用服务器 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -48,6 +53,20 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
